--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dépendances
+node_modules/
+
+# Fichiers de build
+dist/
+build/
+
+# Fichiers d'environnement
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Fichiers de logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +36,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Fichiers spécifiques à l'IDE
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Fichiers de cache
+.cache/
+.parcel-cache/
+
+# Fichiers système
+.DS_Store
+Thumbs.db
+
+# Firebase
+.firebase/
